# cBCI

./: README.md  pyproject.toml  setup.py
cBCI/groups/: performance.py
cBCI/groups/tests/: test_performance.py
cBCI/individual/: performance.py
cBCI/plotting/: accuracy.py
examples/: metacognition.py  target_detection.py
examples/data/: decisions.csv
