[tool.poetry]
name = "cBCI"
version = "0.1.1"
description = "The Collaborative Brain-Computer Interface Toolbox"
authors = ["Davide Valeriani <davide.valeriani@gmail.com>"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
seaborn = "^0.13.0"
pingouin = "^0.5.3"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
